# ETL_generator_coro

./: .env  .gitignore  Makefile  README.md  coro.py  docker-compose.yaml  pyproject.toml  requirements.txt
doc/: decorators.md
src/: data_injector.py  main.py  print_settings.py
src/config/: settings.py
src/models/: models.py
src/state/: base_storage.py  json_file_storage.py  state.py
src/utils/: decorators.py  logger.py
